# NETWORKS_HW2

./: CMakeLists.txt  README.md  TCP.pcapng  UDP.pcapng
output/: README.html
src/: config.hpp  get_buff_size.cpp  get_buff_size.hpp  get_chunk_size.cpp  get_chunk_size.hpp  options.cpp  options.hpp  tcp_client.cpp  tcp_send_receive.cpp  tcp_send_receive.hpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
