CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(1C_TEST_TASK)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_COMPILER clang++)
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_FLAGS "-O2")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)


ADD_LIBRARY(hash STATIC src/hashing.cpp)
ADD_LIBRARY(lcs STATIC src/longest_common_substring.cpp)
TARGET_LINK_LIBRARIES(lcs PUBLIC hash)

ADD_EXECUTABLE(main src/main.cpp)
TARGET_LINK_LIBRARIES(main PRIVATE hash lcs)
